Update the assignment for Web Design 1

--- a/.markbot.yml
+++ b/.markbot.yml
@@ -1,5 +1,5 @@
-repo: 'dinosaur-designs'
-canvasCourse: 'web-dev-1'
+repo: "dinosaur-designs"
+canvasCourse: "web-design-1"
 
 inherit:
   - naming-restrict-live
@@ -11,65 +11,65 @@ inherit:
   - google-fonts
 
 html:
-  - path: 'index.html'
+  - path: "index.html"
     has:
-      - ['link[href*="Patua+One"]', 'The Google Font, `Patua One` is missing']
-      - 'header'
-      - 'header h1'
-      - 'header h1 img'
-      - 'header nav'
-      - 'header nav ol'
-      - 'header nav ol li'
-      - 'header nav ol li a'
-      - 'main'
-      - 'main h2'
-      - 'main figure'
-      - 'main figcaption'
+      - ['link[href*="Patua+One"]', "The Google Font, `Patua One` is missing"]
+      - "header"
+      - "header h1"
+      - "header h1 img"
+      - "header nav"
+      - "header nav ol"
+      - "header nav ol li"
+      - "header nav ol li a"
+      - "main"
+      - "main h2"
+      - "main figure"
+      - "main figcaption"
       - check: 'a[href="#hadrosaur"]'
-        message: 'The Hadrosaur navigation link doesn’t point to the Hadrosaur information'
+        message: "The Hadrosaur navigation link doesn’t point to the Hadrosaur information"
       - check: 'a[href="#iguanodon"]'
-        message: 'The Iguanodon navigation link doesn’t point to the Iguanodon information'
+        message: "The Iguanodon navigation link doesn’t point to the Iguanodon information"
       - check: 'a[href="#stegosaurus"]'
-        message: 'The Stegosaurus navigation link doesn’t point to the Stegosaurus information'
+        message: "The Stegosaurus navigation link doesn’t point to the Stegosaurus information"
       - check: 'img[src="images/dinos-r-us.svg"]'
-        message: 'The logo image doesn’t point to the correct location'
+        message: "The logo image doesn’t point to the correct location"
       - check: 'img[src="images/hadrosaur.jpg"]'
-        message: 'The Hadrosaur image doesn’t point to the correct location'
+        message: "The Hadrosaur image doesn’t point to the correct location"
       - check: 'img[src="images/iguanodon.jpg"]'
-        message: 'The Iguanodon image doesn’t point to the correct location'
+        message: "The Iguanodon image doesn’t point to the correct location"
       - check: 'img[src="images/stegosaurus.jpg"]'
-        message: 'The Stegosaurus image doesn’t point to the correct location'
+        message: "The Stegosaurus image doesn’t point to the correct location"
     search:
-      - 'Dinos ’R’ Us'
-      - 'Hadrosaur'
-      - 'Iguanodon'
-      - 'Stegosaurus'
-      - 'Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous'
-      - 'Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway'
-      - 'Due to their distinctive combination of broad'
+      - "Dinos ’R’ Us"
+      - "Hadrosaur"
+      - "Iguanodon"
+      - "Stegosaurus"
+      - "Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous"
+      - "Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway"
+      - "Due to their distinctive combination of broad"
     searchNot:
-      - check: 'HADROSAUR'
-        message: 'Capital letters shouldn’t be used in the HTML (except for acronyms); use CSS to make letters visually uppercase'
-      - check: 'IGUANODON'
-        message: 'Capital letters shouldn’t be used in the HTML (except for acronyms); use CSS to make letters visually uppercase'
-      - check: 'STEGOSAURUS'
-        message: 'Capital letters shouldn’t be used in the HTML (except for acronyms); use CSS to make letters visually uppercase'
+      - check: "HADROSAUR"
+        message: "Capital letters shouldn’t be used in the HTML (except for acronyms); use CSS to make letters visually uppercase"
+      - check: "IGUANODON"
+        message: "Capital letters shouldn’t be used in the HTML (except for acronyms); use CSS to make letters visually uppercase"
+      - check: "STEGOSAURUS"
+        message: "Capital letters shouldn’t be used in the HTML (except for acronyms); use CSS to make letters visually uppercase"
 
 css:
-  - path: 'css/main.css'
+  - path: "css/main.css"
     has:
-      - ['html', 'line-height']
-      - ['img', 'width', '100%']
-      - ['h1', 'font-family']
-      - ['h1', 'color', '#5d8432']
-      - ['figcaption', 'font-style']
-      - ['nav', 'font-weight']
-      - ['nav', 'font-family']
-      - ['nav ol', 'list-style-type']
-      - ['nav a', 'text-decoration']
-      - ['nav a', 'color', '#793284']
-      - ['nav a:hover', 'color', '#b42885']
-      - ['.intro', 'font-size', '1rem']
+      - ["html", "line-height"]
+      - ["img", "width", "100%"]
+      - ["h1", "font-family"]
+      - ["h1", "color", "#5d8432"]
+      - ["figcaption", "font-style"]
+      - ["nav", "font-weight"]
+      - ["nav", "font-family"]
+      - ["nav ol", "list-style-type"]
+      - ["nav a", "text-decoration"]
+      - ["nav a", "color", "#793284"]
+      - ["nav a:hover", "color", "#b42885"]
+      - [".intro", "font-size", "1rem"]
     searchNot:
-      - check: 'cursive'
-        message: 'Patua One should not have `cursive` as a backup font because it isn’t a cursive typeface; the backup should be `sans-serif`'
+      - check: "cursive"
+        message: "Patua One should not have `cursive` as a backup font because it isn’t a cursive typeface; the backup should be `sans-serif`"
